# seismic-forward

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENCE.md  README  README.md  TestScript.pl  make_compare_storm_grids.sh  make_compare_traces.sh  pre-commit  pyproject.toml  run_cmake.sh
.github/workflows/: build_and_test.yml  build_test_deploy.yml
cmake/: AddSource.cmake  FindFFTW.cmake  FindIntelStudio.cmake  FindMKL.cmake  FindMatlabMex.cmake
compare_segy_traces/: compare_traces.cpp
doc/: UserManual.md
geo2seis/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compare_traces.cpp  main.cpp  modelsettings.cpp  modelsettings.hpp  seismic_forward.cpp  seismic_forward.hpp  seismic_geometry.cpp  seismic_geometry.hpp  seismic_output.cpp  seismic_output.hpp  seismic_parameters.cpp  seismic_parameters.hpp  seismic_regridding.cpp  seismic_regridding.hpp  tasklist.cpp  tasklist.hpp  xmlmodelfile.cpp  xmlmodelfile.hpp
geo2seis/NEW/: seismic_forward.cpp  seismic_forward.hpp  seismic_parameters.cpp  seismic_parameters.hpp  seismic_regridding.cpp  seismic_regridding.hpp  xmlmodelfile.cpp
geo2seis/OLD/: modelsettings.cpp  modelsettings.hpp  seismic_forward.cpp  seismic_forward.hpp  seismic_regridding.hpp  xmlmodelfile.cpp
geo2seis/TEMP debug files/: seismic_forward - Copy (2).cpp  seismic_forward - Copy (2).hpp  seismic_forward - Copy (3).cpp  seismic_forward - Copy.cpp  seismic_forward - Copy.hpp  seismic_forward - debug1240-1280.cpp  seismic_forward_inf_timeshift.cpp  seismic_forward_tmp_saved1910.cpp  seismic_regridding -debug_copy_0506.cpp
geo2seis/physics/: wavelet.cpp  wavelet.hpp  zoeppritz.cpp  zoeppritz.hpp  zoeppritz_pp.cpp  zoeppritz_pp.hpp  zoeppritz_ps.cpp  zoeppritz_ps.hpp
geo2seis/utils/: gen_resampl_param.cpp  gen_resampl_param.hpp  gen_seis_trace_params.hpp  nmo_output.cpp  nmo_output.hpp  nmo_result.cpp  nmo_result.hpp  output.cpp  output.hpp  resampl_output.cpp  resampl_output.hpp  resampl_trace.hpp  result_trace.cpp  result_trace.hpp  segy_writer.cpp  segy_writer.hpp  seis_output.cpp  seis_output.hpp  seis_result.cpp  seis_result.hpp  storm_writer.cpp  storm_writer.hpp  trace.cpp  trace.hpp
mex/: Angle.m  CMakeLists.txt  ElasticParameters.m  G2SModel.m  OutputGrid.m  SurfaceContainer.m  Wavelet.m  WhiteNoise.m  class_handle.hpp  g2s_model.cpp  g2s_model.hpp  surface_container.cpp  surface_container.hpp
nr/: CMakeLists.txt  CMakeLists.txt_tmp  CTestTestfile.cmake  Makefile  cmake_install.cmake
nr/nrlib/: CMakeLists.txt
nr/nrlib/eclipsegrid/: eclipsefault.cpp  eclipsegeometry.cpp  eclipsegeometry.hpp  eclipsegrid.hpp  module.mk
nr/nrlib/extrapolation/: extrapolategrid2d.cpp  extrapolategrid2d.hpp
nr/nrlib/fft/: fft.hpp
seismic_forward/: __init__.py  cli.py  simulation.py
seismic_forward/tests/: test_cli.py  test_integration.py
seismicforward/: __init__.py  cli.py  simulation.py
seismicforward/tests/: test_integration.py
src/: CMakeLists.txt  compare_storm_grids.cpp  main.cpp  modelsettings.cpp  modelsettings.hpp  seismic_forward.cpp  seismic_forward.hpp  seismic_geometry.cpp  seismic_output.cpp  seismic_output.hpp  seismic_parameters.cpp  seismic_parameters.hpp  seismic_regridding.cpp  seismic_regridding.hpp  tasklist.cpp  wavelet.cpp  wavelet.hpp  xmlmodelfile.cpp  xmlmodelfile.hpp
src/physics/: wavelet.cpp  wavelet.hpp  zoeppritz.cpp  zoeppritz.hpp  zoeppritz_pp.cpp  zoeppritz_pp.hpp  zoeppritz_ps.cpp  zoeppritz_ps.hpp
src/utils/: gen_resampl_param.cpp  gen_resampl_param.hpp  gen_seis_trace_params.cpp  gen_seis_trace_params.hpp  output.cpp  output.hpp  resampl_output.cpp  resampl_output.hpp  resampl_trace.cpp  resampl_trace.hpp  result_trace.cpp  result_trace.hpp  storm_writer.cpp  trace.hpp
test_suite/: copy_log_file_to_answer.pl
test_suite/01_nmo_pp/: Logfile.txt  modelfile.xml
test_suite/02_nmo_pp_noise/: modelfile.xml
test_suite/03_nmo_ps/: modelfile.xml
test_suite/04_off_pp/: modelfile.xml
test_suite/05_off_pp_wavelet_from_file/: Ricker_30Hz_4.0ms.txt  modelfile.xml
test_suite/05_off_ps/: modelfile.xml
test_suite/06_pp/: modelfile.xml
test_suite/07_ps/: modelfile.xml
test_suite/08_ps_noise/: modelfile.xml
test_suite/09_remove_negative_dz/: modelfile.xml
test_suite/10_keep_negative_dz/: modelfile.xml
test_suite/11_corner_point/: modelfile.xml
test_suite/12_Reek_center_point_interpolation/: modelfile.xml
test_suite/13_Reek_corner_point_interpolation/: modelfile.xml
test_suite/14_Drogon_center_point_interpolation_nmo/: modelfile.xml
test_suite/15_Drogon_corner_point_interpolation_nmo/: modelfile.xml
test_suite/16_Drogon_center_point_interpolation_nmo_white_noise/: modelfile.xml
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compare_traces - Copy.cpp  compare_traces.cpp  current_directory_test.cpp  main.cpp  test_cutest.cpp  test_test.cpp
tests/data/: Input_base_surface.irap  Input_timeshift_minus50_twt_PS.storm  answ_nmo_pp_noise_seismic_time.segy  answ_nmo_pp_seismic_depth.segy  answ_nmo_pp_seismic_prenmo_time.segy  answ_nmo_pp_seismic_time.segy  answ_nmo_pp_seismic_time_prenmo.segy  answ_nmo_pp_seismic_timeshift.segy  answ_nmo_ps_seismic_depth.segy  answ_nmo_ps_seismic_prenmo_time.segy  answ_nmo_ps_seismic_time.segy  answ_nmo_ps_seismic_time_prenmo.segy  answ_nmo_ps_seismic_timeshift.segy  answ_off_pp_seismic_depth.segy  answ_off_pp_seismic_time.segy  answ_off_pp_seismic_timeshift.segy  answ_off_ps_seismic_depth.segy  answ_off_ps_seismic_time.segy  answ_off_ps_seismic_timeshift.segy  answ_pp_seismic_depth.segy  answ_pp_seismic_time.segy  answ_pp_seismic_timeshift.segy  answ_ps_noise_seismic_depth.segy  answ_ps_noise_seismic_time.segy  answ_ps_noise_seismic_timeshift.segy  answ_ps_seismic_depth.segy  answ_ps_seismic_time.segy  answ_ps_seismic_timeshift.segy  modelfile_cornerpt.xml  modelfile_keep_negz.xml  modelfile_nmo_pp.xml  modelfile_nmo_pp_noise.xml  modelfile_nmo_ps.xml  modelfile_off_pp.xml  modelfile_off_ps.xml  modelfile_pp.xml  modelfile_ps.xml  modelfile_ps_noise.xml  modelfile_rem_negz.xml  nmo_pp_seismic_depth.segy  (+13 more)
(+103 files in other folders)
