[build-system]
requires = ["setuptools>=42", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seismic-forward"
dynamic = ["version"]
authors = [
    {name = "Equinor"}
]
description = "Seismic Forward Modeling Tool"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++"
]

[project.urls]
Homepage = "https://github.com/equinor/seismic-forward"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
seismic_forward = "seismic_forward.cli:main"

[tool.setuptools]
packages = ["seismic_forward"]
package-data = {seismic_forward = ["bin/seismic_forward"]}

[tool.wheel]
platforms = ["manylinux_2_28_x86_64"]
